# presence

./: .env.example  Cargo.toml  README.md  dev.sh  docker-compose.yml
.github/workflows/: checks.yaml
src/: discord.rs  main.rs  redis.rs
