[package]
name = "presence"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"]}
warp = { version = "0.4.2", default-features = false, features = ["server", "websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
